# microservice-template-rust

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/: README.md
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230410065624_init.up.sql  schema.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/routes/: handler.rs  health_check.rs
src/users/: mod.rs  model.rs  schema.rs
tests/api/: health_check.rs  helpers.rs
